Removed scrollbar on index. Fixed the page alignment. Removed extra snippits folder.

--- a/WorkTemplate/css/style.css
+++ b/WorkTemplate/css/style.css
@@ -99,7 +99,7 @@ figure {
   bottom: 0;
   top: 0;
   left: 0;
-  overflow-y: scroll;
+  overflow-y: hidden;
   z-index: 1001;
   background: #fff;
   -webkit-transition: 0.5s;
